--- a/wp-content/themes/manic-offshore-theme/css/style.less
+++ b/wp-content/themes/manic-offshore-theme/css/style.less
@@ -6,6 +6,7 @@
 @light-brown: #ecc68c;
 @white: #ffffff;
 @grey: #646464;
+@dark-grey: #363636;
 
 //     ____ _____ _   _ _____ ____      _    _     
 //    / ___| ____| \ | | ____|  _ \    / \  | |    
@@ -158,7 +159,7 @@ body.custom-zopim-visible{
 @import "footer.less";
 @import "forms.less";
 @import "page_home.less";
-@import "page_offshore.less";
+@import "sub_pages.less";
 
 
 
