--- a/wp-content/themes/manic-offshore-theme/css/forms.less
+++ b/wp-content/themes/manic-offshore-theme/css/forms.less
@@ -120,6 +120,12 @@
     visibility: hidden;
     position: absolute;
   }
+  .country-options-container {
+    width: 75%;
+  }
+  .price {
+    padding-top: 11px;
+  }
 }
 
 .reg_complete {
@@ -129,6 +135,69 @@
     color: @dark-blue;
   }
 }
+
+.stepwizard-step p {
+    margin-top: 10px;    
+}
+
+.stepwizard-row {
+    display: table-row;
+}
+
+.stepwizard {
+    display: table;     
+    width: 100%;
+    position: relative;
+
+    .stepwizard-step button[disabled] {
+        opacity: 1 !important;
+        filter: alpha(opacity=100) !important;
+    }
+
+    .stepwizard-row:before {
+        top: 21px;
+        bottom: 0;
+        position: absolute;
+        content: " ";
+        width: 100%;
+        height: 1px;
+        background-color: #A2A0A0;
+        z-order: 0;
+        
+    }
+
+    .stepwizard-step {    
+        display: table-cell;
+        text-align: left;
+        position: relative;
+        &:last-child {
+          width: 40px;
+        }
+    }
+
+    .btn-circle {
+      width: 40px;
+      height: 40px;
+      text-align: center;
+      padding: 6px 0;
+      font-size: 12px;
+      line-height: 1.428571429;
+      border-radius: 25px;
+      border: 1px solid @grey!important;
+    }
+
+    .btn-default {
+      background-color: @white;
+      border-color: @grey;
+    }
+
+    .btn-primary {
+        color: @white;
+        background-color: @dark-blue;
+        border-color: @grey;
+    }
+}
+
 #signup-page-form {
   // ie dropdown fix
   select::-ms-expand {
@@ -136,8 +205,54 @@
   }  
 }
 
+label {
+  display: block;
+  &.checkbox-label, &.country_options_label {
+    display: inline-block;
+    vertical-align: middle;
+  }
+  &.country_options_label {
+    margin-right: 90px;
+  }
+} 
 
-.custom-input-class{
+.ip_address {
+  text-align: right;
+}
+
+.reg-step {
+  display: none;
+}
+
+#registration-page-form {
+  .field-container {  
+    a {
+      display: inline-block;
+      margin-right: 10px;
+    }
+  }
+}
+
+#registration-page-form-2 {
+  ul {
+    display: inline-block;
+    vertical-align: top;
+    li {
+      list-style: none;
+    }
+  }
+  input[type="radio"] {
+    display: inline-block;
+  }  
+}
+
+#registration-page-form-4 {
+  input[type="checkbox"] {
+    display: inline-block;
+  }
+}
+
+.custom-input-class, .custom-input-class-2{
 
   width: 100%;
     // margin-bottom: 30px;
@@ -218,6 +333,11 @@
 
 }
 
+.custom-input-class-2 {
+  width: 49%;
+  margin-right: 4px;
+}
+
 .custom-input-class-select-container{
   position: relative;
   &:before{
@@ -239,6 +359,11 @@
     right: 15px;
     z-index: 6;
     // margin-top: -12px;
+  }
+
+  &.half {
+    width: 50%;
+    display: inline-block;
   }
 }
 
