--- a/wp-content/themes/manic-offshore-theme/css/style.css
+++ b/wp-content/themes/manic-offshore-theme/css/style.css
@@ -648,6 +648,12 @@ footer .widget .mkdf-icon-list-item:hover p {
   visibility: hidden;
   position: absolute;
 }
+.field-container .country-options-container {
+  width: 75%;
+}
+.field-container .price {
+  padding-top: 11px;
+}
 .reg_complete {
   color: red;
   margin-bottom: 20px;
@@ -655,10 +661,97 @@ footer .widget .mkdf-icon-list-item:hover p {
 .reg_complete a {
   color: #008b9b;
 }
+.stepwizard-step p {
+  margin-top: 10px;
+}
+.stepwizard-row {
+  display: table-row;
+}
+.stepwizard {
+  display: table;
+  width: 100%;
+  position: relative;
+}
+.stepwizard .stepwizard-step button[disabled] {
+  opacity: 1 !important;
+  filter: alpha(opacity=100) !important;
+}
+.stepwizard .stepwizard-row:before {
+  top: 21px;
+  bottom: 0;
+  position: absolute;
+  content: " ";
+  width: 100%;
+  height: 1px;
+  background-color: #A2A0A0;
+  z-order: 0;
+}
+.stepwizard .stepwizard-step {
+  display: table-cell;
+  text-align: left;
+  position: relative;
+}
+.stepwizard .stepwizard-step:last-child {
+  width: 40px;
+}
+.stepwizard .btn-circle {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 25px;
+  border: 1px solid #646464 !important;
+}
+.stepwizard .btn-default {
+  background-color: #ffffff;
+  border-color: #646464;
+}
+.stepwizard .btn-primary {
+  color: #ffffff;
+  background-color: #008b9b;
+  border-color: #646464;
+}
 #signup-page-form select::-ms-expand {
   display: none;
 }
-.custom-input-class {
+label {
+  display: block;
+}
+label.checkbox-label,
+label.country_options_label {
+  display: inline-block;
+  vertical-align: middle;
+}
+label.country_options_label {
+  margin-right: 90px;
+}
+.ip_address {
+  text-align: right;
+}
+.reg-step {
+  display: none;
+}
+#registration-page-form .field-container a {
+  display: inline-block;
+  margin-right: 10px;
+}
+#registration-page-form-2 ul {
+  display: inline-block;
+  vertical-align: top;
+}
+#registration-page-form-2 ul li {
+  list-style: none;
+}
+#registration-page-form-2 input[type="radio"] {
+  display: inline-block;
+}
+#registration-page-form-4 input[type="checkbox"] {
+  display: inline-block;
+}
+.custom-input-class,
+.custom-input-class-2 {
   width: 100%;
   padding: 15px;
   outline: 0;
@@ -715,7 +808,8 @@ footer .widget .mkdf-icon-list-item:hover p {
   margin-bottom: 12px;
   */
 }
-.custom-input-class.not-visible {
+.custom-input-class.not-visible,
+.custom-input-class-2.not-visible {
   -moz-opacity: 0;
   -khtml-opacity: 0;
   -webkit-opacity: 0;
@@ -727,11 +821,17 @@ footer .widget .mkdf-icon-list-item:hover p {
   *display: inline;
   zoom: 1;
 }
-.custom-input-class.placeholder {
+.custom-input-class.placeholder,
+.custom-input-class-2.placeholder {
   color: #a9a9a9;
 }
-.custom-input-class option {
+.custom-input-class option,
+.custom-input-class-2 option {
   color: #767676;
+}
+.custom-input-class-2 {
+  width: 49%;
+  margin-right: 4px;
 }
 .custom-input-class-select-container {
   position: relative;
@@ -751,6 +851,10 @@ footer .widget .mkdf-icon-list-item:hover p {
   top: 50%;
   right: 15px;
   z-index: 6;
+}
+.custom-input-class-select-container.half {
+  width: 50%;
+  display: inline-block;
 }
 input.custom-input-class::-webkit-input-placeholder {
   color: #a9a9a9;
@@ -871,7 +975,7 @@ body.home .rev_slider {
 #homepage-core-services-01 .mkdf-blog-boxes-content-holder {
   padding-top: 2px;
   padding-bottom: 12px;
-  padding-left: 22px;
+  padding-left: 21px;
 }
 #homepage-core-services-01 .mkdf-blog-boxes-content-holder h4 {
   font-size: 16px;
@@ -1153,4 +1257,7 @@ body.home .rev_slider {
 }
 .offshore .vc_custom_1455525831117 {
   padding-top: 30px!important;
+}
+.offshore #current_date_time {
+  text-align: right;
 }
