--- a/wp-content/themes/manic-offshore-theme/css/style.css
+++ b/wp-content/themes/manic-offshore-theme/css/style.css
@@ -621,6 +621,9 @@ footer .widget .mkdf-icon-list-item:hover p {
   background-color: #ffffff;
   border-color: #ffffff;
 }
+.add-more {
+  display: block;
+}
 .error-container {
   margin-bottom: 20px;
   color: red;
