--- a/wp-content/themes/manic-offshore-theme/css/forms.less
+++ b/wp-content/themes/manic-offshore-theme/css/forms.less
@@ -224,8 +224,21 @@ label {
 
 .reg-step {
   display: none;
+
+  .add-more {
+    font-family: "Open Sans",serif;
+    font-size: 12px;
+    color: #767676;
+    text-align: right;
+  }
 }
 
+.hide-step-indicators {
+  display: none;
+}
+
+
+ 
 #registration-page-form {
   .field-container {  
     a {
@@ -235,7 +248,7 @@ label {
   }
 }
 
-#registration-page-form-2 {
+#registration-page-form-1 {
   ul {
     display: inline-block;
     vertical-align: top;
@@ -248,9 +261,30 @@ label {
   }  
 }
 
-#registration-page-form-4 {
+#registration-page-form-3 {
   input[type="checkbox"] {
     display: inline-block;
+  }
+}
+
+#registration-page-form-4 {
+  label {
+    display: inline-block;
+    width: 165px;
+  }
+  input {
+    display: inline-block;
+    width: 300px;
+  }
+  .small-input {
+    width: 250px;
+    display: inline-block;
+  }
+  .small-input-2 {
+    width: 50px;
+    padding-left: 0px;
+    padding-right: 0px;
+    text-align: center;
   }
 }
 
