--- a/wp-content/themes/manic-offshore-theme/css/style.css
+++ b/wp-content/themes/manic-offshore-theme/css/style.css
@@ -736,22 +736,49 @@ label.country_options_label {
 .reg-step {
   display: none;
 }
+.reg-step .add-more {
+  font-family: "Open Sans", serif;
+  font-size: 12px;
+  color: #767676;
+  text-align: right;
+}
+.hide-step-indicators {
+  display: none;
+}
 #registration-page-form .field-container a {
   display: inline-block;
   margin-right: 10px;
 }
-#registration-page-form-2 ul {
+#registration-page-form-1 ul {
   display: inline-block;
   vertical-align: top;
 }
-#registration-page-form-2 ul li {
+#registration-page-form-1 ul li {
   list-style: none;
 }
-#registration-page-form-2 input[type="radio"] {
+#registration-page-form-1 input[type="radio"] {
   display: inline-block;
 }
-#registration-page-form-4 input[type="checkbox"] {
+#registration-page-form-3 input[type="checkbox"] {
   display: inline-block;
+}
+#registration-page-form-4 label {
+  display: inline-block;
+  width: 165px;
+}
+#registration-page-form-4 input {
+  display: inline-block;
+  width: 300px;
+}
+#registration-page-form-4 .small-input {
+  width: 250px;
+  display: inline-block;
+}
+#registration-page-form-4 .small-input-2 {
+  width: 50px;
+  padding-left: 0px;
+  padding-right: 0px;
+  text-align: center;
 }
 .custom-input-class,
 .custom-input-class-2 {
@@ -1263,4 +1290,6 @@ body.home .rev_slider {
 }
 .offshore #current_date_time {
   text-align: right;
+  color: #646464;
+  font-size: 17px;
 }
