updated all changes

--- a/b/css/offshore/forms.less
+++ b/b/css/offshore/forms.less
@@ -209,9 +209,11 @@
 }
 
 label {
+  padding-bottom: 10px;
   padding-left: 10px;
   vertical-align: middle;
   display: inline-block;
+  font-size: 12px;
   // display: block;
   &.checkbox-label, &.country_options_label {
     display: inline-block;
@@ -222,12 +224,20 @@ label {
   }
 } 
 
+h3.form-header {
+  margin-bottom: 20px;
+}
+
 .ip_address {
   text-align: right;
 }
 
 .reg-step {
   display: none;
+}
+
+.active {
+  display: block!important;
 }
 
 #registration-page-form {
