--- a/wp-content/themes/manic-offshore-theme/css/forms.less
+++ b/wp-content/themes/manic-offshore-theme/css/forms.less
@@ -123,7 +123,16 @@
     position: absolute;
   }
   .country-options-container {
-    width: 75%;
+    width: 100%;
+
+    .col-1-header, .col-2-header, .col-3-header, .col-1, .col-2, .col-3 {
+      display: inline-block;
+      width: 32%;
+      vertical-align: top;
+      .price {
+        padding-top: 0px;
+      }
+    }
   }
   .price {
     padding-top: 11px;
@@ -139,7 +148,11 @@
 }
 
 .stepwizard-step p {
-    margin-top: 10px;    
+    margin-top: 10px;  
+    position: absolute;
+    top: 80px;
+    width: 210px;
+    left: 5px;  
 }
 
 .stepwizard-row {
@@ -163,40 +176,91 @@
         content: " ";
         width: 100%;
         height: 1px;
-        background-color: #A2A0A0;
+        // background-color: #A2A0A0;
         z-order: 0;
         
     }
 
     .stepwizard-step {    
-        display: table-cell;
+        // display: table-cell;
+        width: 80px;
+        margin-right: 100px;
+        display: inline-block;
         text-align: left;
         position: relative;
-        &:last-child {
-          width: 40px;
+        &:nth-of-type(1), &:nth-of-type(3) {
+          p {
+            left: 0px;
+          }
         }
-    }
-
-    .btn-circle {
-      width: 40px;
-      height: 40px;
-      text-align: center;
-      padding: 6px 0;
-      font-size: 12px;
-      line-height: 1.428571429;
-      border-radius: 25px;
-      border: 1px solid @grey!important;
-    }
-
-    .btn-default {
-      background-color: @white;
-      border-color: @grey;
-    }
-
-    .btn-primary {
-        color: @white;
-        background-color: @dark-blue;
-        border-color: @grey;
+        &:nth-of-type(2) {
+          p {
+            left: -40px;  
+          }
+          
+        }        
+        &:last-child {
+          // width: 40px;
+          margin-right: 0px;
+          &:before {
+            display: none;
+          }
+        }
+        &:before {
+          display: inline-block;
+          font: normal normal normal 14px/1 FontAwesome;
+          font-size: inherit;
+          text-rendering: auto;
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+          content: "\f105";
+          display: block;
+          font-size: 30px;
+          line-height: 40px;
+          color: #3576ba;
+          text-align: center;
+          position: absolute;
+          margin-left: -10px;
+          margin-top: -20px;
+          right: -60px;
+          top: 50%;
+          width: 40px;
+          height: 40px;
+        }
+        color: grey;
+        &.active-step {
+          color: @dark-blue;
+        }
+        button {
+          border: none;
+          width: 80px;
+          height: 90px;
+          
+        }
+        &:nth-of-type(1) {
+          button {
+            background: url("http://clients.manic.com.sg/offshore/wp-content/uploads/2016/01/Offshore_Icon-01.png") no-repeat;            
+            background-size: contain;
+          }
+        }
+        &:nth-of-type(2) {
+          button {
+            background: url("http://clients.manic.com.sg/offshore/wp-content/uploads/2016/01/Offshore_Icon-02.png") no-repeat;            
+            background-size: contain;
+          }
+        }
+        &:nth-of-type(3) {
+          button {
+            background: url("http://clients.manic.com.sg/offshore/wp-content/uploads/2016/01/Offshore_Icon-03.png") no-repeat;            
+            background-size: contain;
+          }
+        }
+        &:nth-of-type(4) {
+          button {
+            background: url("http://clients.manic.com.sg/offshore/wp-content/uploads/2016/01/Offshore_Icon-04.png") no-repeat;            
+            background-size: contain;
+          } 
+        }
     }
 }
 
@@ -233,6 +297,10 @@ label {
   }
 }
 
+.active {
+  display: block!important;
+}
+
 .hide-step-indicators {
   display: none;
 }
@@ -245,6 +313,16 @@ label {
       display: inline-block;
       margin-right: 10px;
     }
+  }
+}
+
+label.align-label {
+  padding-top: 7px;
+}
+
+.nominee-container {
+  &.hidden {
+    display: none;
   }
 }
 
@@ -264,6 +342,10 @@ label {
 #registration-page-form-3 {
   input[type="checkbox"] {
     display: inline-block;
+  }
+  input:disabled{ 
+    background-color: @grey-2;
+    border-color: @grey-3;
   }
 }
 
@@ -286,6 +368,17 @@ label {
     padding-right: 0px;
     text-align: center;
   }
+  .route-specific-summary {
+    display: none;
+  }
+}
+
+.custom-input-container-left {
+  width: 70%;
+  margin-right: 20px;
+}
+.custom-input-container-right {
+  width: 25%;
 }
 
 .custom-input-class, .custom-input-class-2{
