--- a/wp-content/themes/manic-offshore-theme/css/style.less
+++ b/wp-content/themes/manic-offshore-theme/css/style.less
@@ -7,6 +7,8 @@
 @white: #ffffff;
 @grey: #646464;
 @dark-grey: #363636;
+@grey-2: #dddddd;
+@grey-3: #BFBFBF;
 
 //     ____ _____ _   _ _____ ____      _    _     
 //    / ___| ____| \ | | ____|  _ \    / \  | |    
