--- a/wp-content/themes/manic-offshore-theme/css/forms.less
+++ b/wp-content/themes/manic-offshore-theme/css/forms.less
@@ -73,6 +73,14 @@
     background-color: @white;
     border-color: @white;
   }
+
+  &.custom-submit-class-2 {
+    width: 200px;
+    height: 30px;
+    margin-top: 15px;
+    padding: 0px 20px;
+    display: block;
+  }
 }
 
 .add-more {
@@ -183,7 +191,7 @@
 
     .stepwizard-step {    
         // display: table-cell;
-        width: 80px;
+        width: 130px;
         margin-right: 100px;
         display: inline-block;
         text-align: left;
@@ -350,6 +358,9 @@ label.align-label {
 }
 
 #registration-page-form-4 {
+  .half-field-container {
+    width: 70%;
+  }
   label {
     display: inline-block;
     width: 165px;
@@ -367,6 +378,9 @@ label.align-label {
     padding-left: 0px;
     padding-right: 0px;
     text-align: center;
+  }
+  .one-row {
+    display: block;
   }
   .route-specific-summary {
     display: none;
