--- a/wp-content/themes/manic-offshore-theme/css/sub_pages.less
+++ b/wp-content/themes/manic-offshore-theme/css/sub_pages.less
@@ -40,6 +40,22 @@
     	display: none;
     }
 
+	.each-header, .each-content {
+		display: inline-block;
+		vertical-align: middle;
+		width: 24%;       
+	}
+	.each-header {
+		margin-bottom: 5px;
+	}
+	.each-content {
+		margin-bottom: 15px; 
+	}
+	.custom-submit-class {
+		margin-top: 0px;
+		min-width: 185px;
+	}
+
 } 
 
 #buddypress div.item-list-tabs ul li.current a, #buddypress div.item-list-tabs ul li.selected a {
