--- a/wp-content/themes/manic-offshore-theme/css/style.css
+++ b/wp-content/themes/manic-offshore-theme/css/style.css
@@ -214,6 +214,9 @@ body.custom-zopim-visible .zopim:nth-of-type(2) {
 #mkdf-back-to-top {
   display: none !important;
 }
+select::-ms-expand {
+  display: none;
+}
 header.mkdf-page-header .mkdf-menu-area {
   height: 65px;
 }
@@ -878,9 +881,6 @@ footer .widget .mkdf-icon-list-item:hover p {
   background: url("http://clients.manic.com.sg/offshore/wp-content/uploads/2016/01/Offshore_Icon-04.png") no-repeat;
   background-size: contain;
 }
-#signup-page-form select::-ms-expand {
-  display: none;
-}
 label {
   display: block;
 }
@@ -932,6 +932,30 @@ label.align-label {
 #registration-page-form-1-1 input[type="radio"],
 #registration-page-form-1-2 input[type="radio"] {
   display: inline-block;
+}
+#registration-page-form-1-1 .field-container,
+#registration-page-form-1-2 .field-container {
+  margin-bottom: 0px;
+}
+#registration-page-form-1-1 .each-header,
+#registration-page-form-1-2 .each-header,
+#registration-page-form-1-1 .each-content,
+#registration-page-form-1-2 .each-content {
+  display: inline-block;
+  vertical-align: middle;
+  width: 24%;
+}
+#registration-page-form-1-1 .each-header,
+#registration-page-form-1-2 .each-header {
+  margin-bottom: 5px;
+}
+#registration-page-form-1-1 .each-content,
+#registration-page-form-1-2 .each-content {
+  margin-bottom: 15px;
+}
+#registration-page-form-1-1 .custom-submit-class,
+#registration-page-form-1-2 .custom-submit-class {
+  margin-top: 0px;
 }
 #registration-page-form-3 input[type="checkbox"] {
   display: inline-block;
@@ -1511,6 +1535,22 @@ body.home .rev_slider {
 }
 .dashboard #notifications-personal-li {
   display: none;
+}
+.dashboard .each-header,
+.dashboard .each-content {
+  display: inline-block;
+  vertical-align: middle;
+  width: 24%;
+}
+.dashboard .each-header {
+  margin-bottom: 5px;
+}
+.dashboard .each-content {
+  margin-bottom: 15px;
+}
+.dashboard .custom-submit-class {
+  margin-top: 0px;
+  min-width: 185px;
 }
 #buddypress div.item-list-tabs ul li.current a,
 #buddypress div.item-list-tabs ul li.selected a {
