--- a/wp-content/themes/manic-offshore-theme/css/forms.less
+++ b/wp-content/themes/manic-offshore-theme/css/forms.less
@@ -289,7 +289,7 @@
 
     .stepwizard-step {    
         // display: table-cell;
-        width: 130px;
+        width: 14.5%;
         margin-right: 100px;
         display: inline-block;
         text-align: left;
@@ -498,6 +498,41 @@ label.align-label {
   }
   .route-specific-summary {
     display: none;
+  }
+  .field-container {
+    margin-bottom: 0px;
+  }
+  .edit-form {
+    display: none;
+  }
+  .col-1 {
+    width: 30%;
+  }
+  .col-2 {
+    width: 42%;
+    
+  }
+  .custom-submit-class-2 {
+    &:nth-of-type(1) {
+      margin-top: 0px;
+    }
+    margin-top: 5px;      
+  }
+  .nominee-cta-container, .service-cta-container {
+    margin: 0 auto;
+    text-align: right;
+    button {
+      display: inline-block;
+    }
+  }
+
+  .service-cta-container {
+      button {
+        margin-left: 15px;
+      }
+  }
+  .text-container {
+    text-align: center;
   }
 }
 
