--- a/wp-content/themes/manic-offshore-theme/css/sub_pages.less
+++ b/wp-content/themes/manic-offshore-theme/css/sub_pages.less
@@ -55,12 +55,179 @@
 		margin-top: 0px;
 		min-width: 185px;
 	}
+	
+	#subnav {
+		ul {
+			li {
+				a {
+					padding: 0px 20px!important;
+					display: block;
+					margin-right: 5px;
+
+					color: #ffffff;
+					background-color: @dark-blue;
+
+
+					font-size: 14px;
+					line-height: 1.7em;
+					font-family: Montserrat;
+					font-style: normal;
+					font-weight: 700;
+					text-transform: none;
+					letter-spacing: 0px;
+					border-width: 2px;
+					border-radius: 30px;
+
+					cursor: pointer;
+					border: 2px solid #08c;
+					border-color: @dark-blue;
+					display: inline-block;
+					position: relative;
+					outline: 0;
+					transition: color .2s ease-in-out,background-color .2s ease-in-out,border-color .2s ease-in-out;
+					-webkit-appearance: none;
+
+					&:hover{
+						color: @dark-blue;
+						background-color: @white;
+						border-color: @white;
+					}
+				}
+			}
+		}
+	}
+
+	.message-search {
+	    display: block;
+    	margin-top: 30px!important;
+    	input[type=text] {
+    		width: 180px!important;
+    	}
+	}
+
+	.messages-options-nav {
+		margin-top: 20px;
+	}
+
+	ul.tabs {
+		list-style: none;			
+		overflow: hidden;
+		li {
+			display: inline-block;
+    		margin-right: -2px;			
+			a {				
+				display: block;
+				background: @dark-blue;
+				.round(5px);
+				text-align: center;
+				min-width: 170px;
+				color: @white;
+				padding-bottom: 6px;
+    			padding-top: 4px;
+    			&.active {
+    				background: @dark-grey;
+    			}
+    			&:hover {
+    				background: @dark-grey;
+    			}
+			}
+		}
+	}
+
+	#tabs-content-seperator {
+		background: #F7F7F7;
+	    top: -3px;
+	    position: relative;
+	}
+
+	.profile-fields {
+		a {
+			color: @dark-grey;
+			text-decoration: underline;
+		}
+	}
+
+	#general-personal-li {
+		display: none;
+	}
+
+	form {
+		input[type=text],input[type=email],input[type=password], select {
+			width: 100%!important;
+			padding: 15px!important;
+			outline: 0;			
+			border: 1px solid transparent!important;						
+			color: #767676!important;
+			font-size: 12px!important;
+			line-height: 22px!important;
+			font-family: "Open Sans",serif!important;
+			font-style: normal!important;
+			font-weight: 400!important;
+			text-transform: none;
+			letter-spacing: 0px;
+			background-color: rgba(255, 255, 255, 1)!important;
+			border-color: rgba(255, 255, 255, 1)!important;
+			border-width: 1px!important;
+			.round(6px)!important;
+			padding: 12px 24px 12px 24px!important;			
+			margin-top: 0px!important;			
+
+			-webkit-box-sizing: border-box;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
+			-webkit-transition: border-color .2s ease-out;
+			transition: border-color .2s ease-out;
+			resize: none;
+
+			-webkit-appearance: none;
+			-moz-appearance:    none;
+			appearance:         none;
+
+			position: relative;			
+		}
+		input[type=submit] {
+			color: @white!important;			
+			background-color: @dark-blue!important;
+			font-size: 14px!important;
+			line-height: 1.7em;
+			height: 42px;
+			font-family: Montserrat;
+			font-style: normal;
+			font-weight: 700;
+			text-transform: none;
+			letter-spacing: 0px;
+			border-width: 2px!important;
+			.round(30px);
+
+			cursor: pointer!important;
+			padding: 6px 30px!important;
+			border: 2px solid #08c!important;
+			border-color: @dark-blue!important;
+			display: inline-block;
+			position: relative;
+			outline: 0;
+			transition: color .2s ease-in-out,background-color .2s ease-in-out,border-color .2s ease-in-out;
+			-webkit-appearance: none;
+
+			margin-top: 7px;
+
+			&:hover{
+				color: @dark-blue!important;
+				background-color: @white!important;
+				border-color: @white!important;
+			}
+		}
+		.field-visibility-settings-notoggle {
+			display: none;
+		}
+	}
 
 } 
 
 #buddypress div.item-list-tabs ul li.current a, #buddypress div.item-list-tabs ul li.selected a {
-	background-color: @dark-blue;
+	background-color: @dark-grey;
 	color: @white;
+	border-color: @dark-grey;
 }
 
 #buddypress table.forum tr.alt td, #buddypress table.messages-notices tr.alt td, #buddypress table.notifications tr.alt td, #buddypress table.notifications-settings tr.alt td, #buddypress table.profile-fields tr.alt td, #buddypress table.profile-settings tr.alt td, #buddypress table.wp-profile-fields tr.alt td {
