--- a/b/css/offshore/general.less
+++ b/b/css/offshore/general.less
@@ -445,3 +445,8 @@ input[type="radio"]:checked + label span {
 a {
   text-decoration: none!important;
 }
+
+// ie dropdown fix
+select::-ms-expand {
+    display: none;
+}  
