--- a/wp-content/themes/manic-offshore-theme/css/forms.less
+++ b/wp-content/themes/manic-offshore-theme/css/forms.less
@@ -425,6 +425,12 @@ label.align-label {
   }
 }
 
+input.error {
+  .placeholder({
+    color: red!important;
+  });
+}
+
 #registration-page-form-1-1, #registration-page-form-1-2 {
   ul {
     display: inline-block;
@@ -455,6 +461,12 @@ label.align-label {
   }
 }
 
+#registration-page-form-1-1 {
+  input#new-incorporation {
+    display: none;
+  }
+}
+
 #registration-page-form-3 {
   input[type="checkbox"] {
     display: inline-block;
@@ -466,6 +478,12 @@ label.align-label {
 }
 
 #registration-page-form-4 {
+  p.error, label.error {
+    color: red!important;
+  }
+  label#tnc-error, label#company_name_choice_3-error, #company_name_choice_2-error, #company_name_choice_1-error {
+    margin-left: 10px;
+  }
   .half-field-container {
     width: 70%;
   }
@@ -473,7 +491,7 @@ label.align-label {
     display: inline-block;
     width: 165px;
   }
-  input {
+  input, select, .custom-input-class-select-container {
     display: inline-block;
     width: 300px;
   }
@@ -533,6 +551,17 @@ label.align-label {
   }
   .text-container {
     text-align: center;
+  }  
+
+  #summarydirector, #summarysecretary, #summaryshareholder {
+    position: relative;
+    #nominee_shareholder_annual_fee, #nominee_director_annual_fee, #nominee_secretary_annual_fee {
+      visibility: hidden;
+      position: absolute;
+    }
+    #nominee_director_annual_fee-error, #nominee_secretary_annual_fee-error {
+      width: 100%!important;
+    }
   }
 }
 
@@ -547,22 +576,22 @@ label.align-label {
 .custom-input-class, .custom-input-class-2{
 
   width: 100%;
-    // margin-bottom: 30px;
-    padding: 15px;
-    outline: 0;
-    font-family: "Open Sans",serif;
-    font-size: 12px;
-    color: #767676;
-    border: 1px solid transparent;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transition: border-color .2s ease-out;
-    transition: border-color .2s ease-out;
-    resize: none;
+  // margin-bottom: 30px;
+  padding: 15px;
+  outline: 0;
+  font-family: "Open Sans",serif;
+  font-size: 12px;
+  color: #767676;
+  border: 1px solid transparent;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: border-color .2s ease-out;
+  transition: border-color .2s ease-out;
+  resize: none;
 
   color: #767676;
   font-size: 12px;
