--- a/wp-content/themes/manic-offshore-theme/css/style.css
+++ b/wp-content/themes/manic-offshore-theme/css/style.css
@@ -595,36 +595,40 @@ footer .widget .mkdf-icon-list-item:hover p {
   transition: border-color 0.2s ease-out;
   resize: none;
 }
-.custom-submit-class {
-  color: #ffffff;
-  background-color: #008b9b;
-  font-size: 14px;
-  line-height: 1.7em;
-  height: 42px;
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 700;
-  text-transform: none;
-  letter-spacing: 0px;
-  border-width: 2px;
-  border-radius: 30px;
+.custom-submit-class,
+.uploadifive-button {
+  color: #ffffff!important;
+  background-image: none!important;
+  background-color: #008b9b !important;
+  font-size: 14px!important;
+  line-height: 1.7em!important;
+  height: 42px!important;
+  font-family: Montserrat!important;
+  font-style: normal!important;
+  font-weight: 700!important;
+  text-transform: none!important;
+  letter-spacing: 0px!important;
+  border-width: 2px!important;
+  border-radius: 30px!important;
   cursor: pointer;
   padding: 6px 30px;
-  border: 2px solid #08c;
-  border-color: #008b9b;
+  border: 2px solid #08c!important;
+  border-color: #008b9b !important;
   display: inline-block;
-  position: relative;
+  position: relative!important;
   outline: 0;
   transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   -webkit-appearance: none;
   margin-top: 7px;
 }
-.custom-submit-class:hover {
+.custom-submit-class:hover,
+.uploadifive-button:hover {
   color: #008b9b;
   background-color: #ffffff;
   border-color: #ffffff;
 }
-.custom-submit-class.custom-submit-class-2 {
+.custom-submit-class.custom-submit-class-2,
+.uploadifive-button.custom-submit-class-2 {
   width: 200px;
   height: 30px;
   margin-top: 15px;
@@ -965,6 +969,11 @@ input.error:-ms-input-placeholder {
 #registration-page-form-1-2 .each-content {
   margin-bottom: 15px;
 }
+#registration-page-form-1-1 .each-content:last-child,
+#registration-page-form-1-2 .each-content:last-child {
+  width: 26.3%;
+  text-align: right;
+}
 #registration-page-form-1-1 .custom-submit-class,
 #registration-page-form-1-2 .custom-submit-class {
   margin-top: 0px;
@@ -979,6 +988,9 @@ input.error:-ms-input-placeholder {
   background-color: #dddddd;
   border-color: #bfbfbf;
 }
+#registration-page-form-4 .go-step-2 {
+  display: none;
+}
 #registration-page-form-4 p.error,
 #registration-page-form-4 label.error {
   color: red!important;
@@ -991,6 +1003,9 @@ input.error:-ms-input-placeholder {
 }
 #registration-page-form-4 .half-field-container {
   width: 70%;
+}
+#registration-page-form-4 .half-field-container-2 {
+  width: 76%;
 }
 #registration-page-form-4 label {
   display: inline-block;
@@ -1031,12 +1046,16 @@ input.error:-ms-input-placeholder {
   display: none;
 }
 #registration-page-form-4 .col-1 {
-  width: 30%;
+  width: 41%;
 }
 #registration-page-form-4 .col-2 {
-  width: 42%;
+  width: 35%;
+}
+#registration-page-form-4 .col-2 .person-info {
+  text-align: left;
 }
 #registration-page-form-4 .custom-submit-class-2 {
+  width: 166px;
   margin-top: 5px;
 }
 #registration-page-form-4 .custom-submit-class-2:nth-of-type(1) {
@@ -1081,6 +1100,9 @@ input.error:-ms-input-placeholder {
 #registration-page-form-4 #summarysecretary #nominee_secretary_annual_fee-error,
 #registration-page-form-4 #summaryshareholder #nominee_secretary_annual_fee-error {
   width: 100%!important;
+}
+#registration-page-form-4 .shareholder-amount-input {
+  margin: 0 auto;
 }
 .custom-input-container-left {
   width: 70%;
