--- a/b/css/libs/mixins.less
+++ b/b/css/libs/mixins.less
@@ -304,3 +304,17 @@
   .transform(translatez(0));
 }
 
+.placeholder(@rules) {
+    &::-webkit-input-placeholder {
+        @rules();
+    }
+    &:-moz-placeholder {
+        @rules();
+    }
+    &::-moz-placeholder {
+        @rules();
+    }
+    &:-ms-input-placeholder {
+        @rules();
+    }
+}
