--- a/b/css/offshore/forms.less
+++ b/b/css/offshore/forms.less
@@ -115,6 +115,10 @@
     cursor: pointer;
 }
 
+.sortable-header {
+  text-decoration: underline;
+}
+
 .sort-btns {
     width: 10px;
     margin: 0 0 0 10px;
@@ -435,7 +439,11 @@ h3.form-header {
   }
 }
 
-
+input.error {
+  // .placeholder({
+  //   color: red!important;
+  // });
+}
 
 input.custom-input-class{
   // placeholders
